[build-system]
requires = [
    "setuptools>=47",
    "setuptools_scm",
    "wheel",
    "cmake>=3.18",
]

[project]
name = "fastddm"
description = "A Python/C++ library for the analysis of Differential Dynamic Microscopy experiments"
readme = "README.md"
authors = [
    { name ="Enrico Lattuada", email = "lattuada.enrico@gmail.com" },
    { name = "Fabian Krautgasser" },
    { name = "Roberto Cerbino" },
]
maintainers = [
    { name ="Enrico Lattuada", email = "lattuada.enrico@gmail.com" },
]
requires-python = ">=3.8"
dependencies = [
    "psutil",
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-image",
    "tifffile",
    "nd2reader",
    "pandas",
    "lmfit",
]
dynamic = [ "license", "version" ]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-regtest",
]
doc = [
    "sphinx",
    "sphinx-tabs",
    "nbsphinx",
    "furo",
    "ipython",
]

[project.urls]
Source = "https://github.com/somexlab/fastddm",
Documentation = "https://fastddm.readthedocs.io",
