[build-system]
requires = ["scikit-build-core>=0.11", "pybind11>=2.13.3"]
build-backend = "scikit_build_core.build"

[project]
name = "fastddm"
description = "A Python/C++ library for the analysis of Differential Dynamic Microscopy experiments"
readme = "README.md"
authors = [
    { name = "Enrico Lattuada" },
    { name = "Fabian Krautgasser" },
    { name = "Roberto Cerbino" },
    { email = "cerbino@gmail.com" },
]
maintainers = [
    { name = "Enrico Lattuada", email = "lattuada.enrico@gmail.com" },
]
requires-python = ">=3.9"
dependencies = [
    "psutil",
    "numpy",
    "scipy",
    "matplotlib",
    "scikit-image",
    "tifffile",
    "nd2reader",
    "pandas",
    "lmfit",
]
dynamic = ["license", "version"]
keywords = [
    "cuda",
    "differential-dynamic-microscopy",
    "digital-fourier-microscopy",
    "gpu",
    "image-analysis",
    "microscopy",
    "python",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
test = ["pytest", "pytest-regtest"]
doc = ["sphinx", "sphinx-tabs", "nbsphinx", "furo", "ipython"]
dev = ["fastddm[test,doc]"]

[project.urls]
Source = "https://github.com/somexlab/fastddm"
Documentation = "https://fastddm.readthedocs.io"
Issues = "https://github.com/somexlab/fastddm/issues"
Changelog = "https://github.com/somexlab/fastddm/blob/main/CHANGELOG.rst"

[tool.setuptools_scm]
fallback_version = "0.3.14"

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

[tool.scikit-build.cmake.define]
ENABLE_CPP = "OFF"
ENABLE_CUDA = "OFF"
SINGLE_PRECISION = "OFF"
